--- a/src/app/components/github-form/github-form.component.html
+++ b/src/app/components/github-form/github-form.component.html
@@ -1,1 +1,25 @@
-<p>github-form works!</p>
+<div class="container mt-3">
+  <div class="row">
+    <div class="col-md">
+      <div class="card">
+        <h5 class="card-header">Github User Search</h5>
+        <div class="card-body">
+          <form class="row g-3">
+            <div class="col-12">
+              <label for="username" class="form-label">Github Username</label>
+              <input
+                type="text"
+                class="form-control"
+                id="username"
+                placeholder="Github Username"
+              />
+            </div>
+            <div class="col-12">
+              <button type="submit" class="btn btn-primary">Search</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
