nestedd form component to output all component data

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-{{ title }}
+<nav class="navbar navbar-dark bg-danger navbar-expand-sm">
+  <a href="/" class="navbar-brand">Angular Github User Search</a>
+</nav>
+
+<app-github-form></app-github-form>
