--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background-image: url(./assets/ghub.jpg);
+  /* background-color: rgba(5, 3, 3, 0.9); */
+  background-position: center center;
+  background-size: 100% 100%;
+  background-attachment: fixed;
+}
+
+button {
+  margin: 0.2rem;
+}
