--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,1 +1,37 @@
-<p>nav works!</p>
+<!-- <nav class="navbar navbar-dark bg-dark navbar-expand-sm">
+  <a href="/" class="navbar-brand">Angular Github User Search</a>
+</nav> -->
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" routerLink="search"><b>Github User search</b></a>
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarNavAltMarkup"
+    aria-controls="navbarNavAltMarkup"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a
+        class="nav-item nav-link active"
+        routerLink="search"
+        routerLinkActive="active"
+        >Search<span class="sr-only">(current)</span></a
+      >
+      <a
+        class="nav-item nav-link active"
+        routerLink="/profile"
+        routerLinkActive="active"
+        >Profile</a
+      >
+      <a class="nav-item nav-link" routerLink="/repos" routerLinkActive="active"
+        >Repositories</a
+      >
+    </div>
+  </div>
+</nav>
