--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-<nav class="navbar navbar-dark bg-danger navbar-expand-sm">
-  <a href="/" class="navbar-brand">Angular Github User Search</a>
-</nav>
-
-<app-github-form></app-github-form>
+<!-- <app-github-form></app-github-form> -->
+<app-nav></app-nav>
+<router-outlet></router-outlet>
