--- a/src/app/components/github-form/github-form.component.html
+++ b/src/app/components/github-form/github-form.component.html
@@ -1,4 +1,4 @@
-<!-- <app-nav></app-nav> -->
+<app-nav></app-nav>
 <div class="container mt-3">
   <div class="row">
     <div class="col-md">
@@ -17,6 +17,7 @@
                 placeholder="Github Username"
               />
             </div>
+            <!-- {{ userQuery }} -->
             <div class="col-12">
               <button type="submit" class="btn btn-primary">Search</button>
             </div>
