--- a/src/app/components/github-form/github-form.component.html
+++ b/src/app/components/github-form/github-form.component.html
@@ -17,7 +17,7 @@
                 placeholder="Github Username"
               />
             </div>
-            <!-- {{ userQuery }} -->
+            <!-- {{ userQuery }}c -->
             <div class="col-12">
               <button type="submit" class="btn btn-primary">Search</button>
             </div>
