--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-github-form></app-github-form>
-<!-- <app-nav></app-nav> -->
-<!-- <router-outlet></router-outlet> -->
+<!-- <app-github-form></app-github-form> -->
+<app-nav></app-nav>
+<router-outlet></router-outlet>
